--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="founders-section">
       <h2>تعرف على الفريق</h2>
-      <h3>MT Team</h3>
+      <h3>𝗠𝗮𝗥 | 𝗦𝘁𝗼𝗿𝗲</h3>
       <div class="founders-grid">
         <div class="founder-card">
           <img src="https://cdn.discordapp.com/attachments/1398522277095669760/1413077353847984258/MAR_LOGO.png?ex=68ba9e56&is=68b94cd6&hm=ee8273e9398aa8f8ded4beee37565c8108de80c7b4842bec4ead42633597d5cc" alt="Dev 1">
@@ -97,3 +97,4 @@
   <script src="scriptPag1/script.js"></script> 
 </body>
 </html>
+
