--- a/index.html
+++ b/index.html
@@ -47,16 +47,12 @@
         </p>
         <div class="stats">
           <div class="stat">
-            <h3 class="stat-number" data-target="40" data-suffix="+">0</h3>
-            <p>صانع محتوى</p>
-          </div>
-          <div class="stat">
-            <h3 class="stat-number" data-target="50" data-suffix="+">0</h3>
+            <h3 class="stat-number" data-target="4" data-suffix="">0</h3>
             <p>اداري</p>
           </div>
           <div class="stat">
-            <h3 class="stat-number" data-target="70" data-suffix="+">0</h3>
-            <p>لاعب</p>
+            <h3 class="stat-number" data-target="8" data-suffix="">0</h3>
+            <p>مشتري</p>
           </div>
         </div>
         <button class="read-more-btn">اقرأ عنا المزيد</button>
@@ -67,7 +63,7 @@
     </section>
     <section class="founders-section">
       <h2>تعرف على الفريق</h2>
-      <h3>𝗠𝗮𝗥 | 𝗦𝘁𝗼𝗿𝗲</h3>
+      <h3>MT Team</h3>
       <div class="founders-grid">
         <div class="founder-card">
           <img src="https://cdn.discordapp.com/attachments/1398522277095669760/1413077353847984258/MAR_LOGO.png?ex=68ba9e56&is=68b94cd6&hm=ee8273e9398aa8f8ded4beee37565c8108de80c7b4842bec4ead42633597d5cc" alt="Dev 1">
@@ -97,4 +93,3 @@
   <script src="scriptPag1/script.js"></script> 
 </body>
 </html>
-
