--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="#">الرئيسية</a></li>
-          <li><a href="#">من نحن</a></li>
+          <li><a href="agree.html" class="nav-register">من نحن</a></li>
           <li><a href="Rules.html" class="nav-register">القوانين</a></li>
           <li><a href="Login.html" class="nav-register">تسجيل حساب جديد</a></li>
         </ul>
@@ -55,7 +55,6 @@
             <p>مشتري</p>
           </div>
         </div>
-        <button class="read-more-btn">اقرأ عنا المزيد</button>
       </div>
       <div class="about-image">
         <img src="https://cdn.discordapp.com/attachments/1398522277095669760/1413077353847984258/MAR_LOGO.png?ex=68ba9e56&is=68b94cd6&hm=ee8273e9398aa8f8ded4beee37565c8108de80c7b4842bec4ead42633597d5cc" alt="Rotating Logo">
